--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="open-sans-normal">
     <!-- header starts here -->
-    <header>
+    <header class="header section-bg">
        <nav>
             <h3 class="nav-title">Ma<span>r</span>y</h3>
             <ul>
@@ -22,11 +22,49 @@
                 <li><a href=""><button class="common-btn">Hire Me</button></a></li>
             </ul>
        </nav>
+
+       <!-- bannar starts here -->
+        <div class="bannar">
+            <div class="bannar-content">
+                <h4 class="greatings dark-2">Hi, I  am</h4>
+                <h1 class="bannar-title">Mary Hardy</h1>
+                <p class="dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="common-btn">Download CV</button>
+                <button class="common-btn contact-btn">Contact</button>
+            </div>
+
+            <img src="images/hardy.png" alt="" class="bannar-image">
+        </div>
+       <!-- bannar ends here -->
     </header>
     <!-- header ends here -->
 
     <main>
+        <section class="about section-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-desc">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
 
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-desc">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-desc">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-desc">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:</p>
+                    <p class="item-desc">Los Angeles</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
