added another section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,92 @@
             </div>
         </section>
 
-        <h1>test for push</h1>
+        <section class="work">
+            <div class="work-title-container">
+                <h3 class="section-title">What I do</h3>
+                <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+
+            <div class="skils-container">
+                <div class="skil">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skil-title">Vanilla JavaScript</p>
+                    <p class="skil-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skil-title">react</p>
+                    <p class="skil-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/nodejs.png " alt="">
+                    <p class="skil-title">Node.js</p>
+                    <p class="skil-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skil-title">MongoDB</p>
+                    <p class="skil-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- work section ends here -->
+
+        <!-- summary section starts here  -->
+        <section class="summary-section">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-container">
+                <div class="education-container">
+                    <h3 class="education-title dark-2">My Education</h3>
+                    <div class="education">
+                        <h4 class="edu-title">Master in Computer Engineering</h4>
+                        <p class="edu-university">Harvard University / 2015 - 2017</p>
+                        <p class="edu-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="education">
+                        <h4 class="edu-title">Master in Computer Engineering</h4>
+                        <p class="edu-university">Harvard University / 2015 - 2017</p>
+                        <p class="edu-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="education">
+                        <h4 class="edu-title">Master in Computer Engineering</h4>
+                        <p class="edu-university">Harvard University / 2015 - 2017</p>
+                        <p class="edu-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                </div>
+                <div class="experience-container">
+                    <h3 class="experienced-title dark-2">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <p class="experience-plat">Apple Inc / 2020 - Current</p>
+                        <p class="experience-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <p class="experience-plat">Apple Inc / 2020 - Current</p>
+                        <p class="experience-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <p class="experience-plat">Apple Inc / 2020 - Current</p>
+                        <p class="experience-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <button class="common-btn">Download CV</button>
+            </div>
+        </section>
     </main>
     <footer>
 
