--- a/index.html
+++ b/index.html
@@ -149,12 +149,34 @@
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
-                <button class="common-btn">Download CV</button>
+            </div>
+            <div class="down-btn-container">
+                <button class="common-btn download-btn">Download CV</button>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="section-bg">
+        <div class="connect-footer">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
 
+            <div class="social-icon">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+
+                <a href=""><img src="images/icons/insta.png" alt=""></a></div>
+        </div>
+
+        <div class="form-section">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="" class="contact-form">
+                <input type="text" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea name="" id="" rows="7" cols="10" placeholder="Write your comments here"></textarea>
+                <input class="common-btn" type="submit" value="submit">
+            </form>
+        </div>
     </footer>
 
 </body>
