--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="open-sans-normal">
     <!-- header starts here -->
-    <header class="header section-bg">
+    <header class="header section-bg hide">
        <nav>
             <h3 class="nav-title">Ma<span>r</span>y</h3>
             <ul>
@@ -40,7 +40,7 @@
     <!-- header ends here -->
 
     <main>
-        <section class="about section-bg">
+        <section class="about section-bg hide">
             <h3 class="section-title">About Me</h3>
             <p class="section-desc">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
@@ -98,7 +98,7 @@
         <!-- work section ends here -->
 
         <!-- summary section starts here  -->
-        <section class="summary-section">
+        <section class="summary-section hide">
             <h3 class="section-title">A summary of My Resume</h3>
 
             <div class="resume-container">
@@ -155,7 +155,7 @@
             </div>
         </section>
     </main>
-    <footer class="section-bg">
+    <footer class="section-bg hide">
         <div class="connect-footer">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
