second push for responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- header ends here -->
 
     <main>
-        <section class="about section-bg hide">
+        <section class="about section-bg">
             <h3 class="section-title">About Me</h3>
             <p class="section-desc">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
@@ -98,7 +98,7 @@
         <!-- work section ends here -->
 
         <!-- summary section starts here  -->
-        <section class="summary-section hide">
+        <section class="summary-section">
             <h3 class="section-title">A summary of My Resume</h3>
 
             <div class="resume-container">
@@ -155,7 +155,7 @@
             </div>
         </section>
     </main>
-    <footer class="section-bg hide">
+    <footer class="section-bg">
         <div class="connect-footer">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
