--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body class="open-sans-normal">
     <!-- header starts here -->
-    <header class="header section-bg hide">
+    <header class="header section-bg">
        <nav>
             <h3 class="nav-title">Ma<span>r</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href=""><button class="common-btn">Hire Me</button></a></li>
+                <li class="hire-btn"><a href=""><button class="common-btn">Hire Me</button></a></li>
             </ul>
        </nav>
 
